[package]
name = "nym-mixnode-rs"
version = "1.0.0"
edition = "2021"

[lib]
name = "nym_mixnode_rs"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
curve25519-dalek = { version = "4.0", features = ["serde"] }
blake3 = "1.5"
aes-gcm = "0.10"
rand_core = "0.6"
vrf = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
serde_json = "1.0"
lru = "0.12"
governor = "0.6"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
hmac = "0.12"
serde_yaml = "0.9"
hyper = { version = "0.14", features = ["full"] }
num_cpus = "1.16"
libc = "0.2"
thiserror = "1.0"
sha2 = "0.10"
arrayref = "0.3"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
bincode = "1.3"
hex = "0.4"
async-trait = "0.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bin]]
name = "nym-mixnode-rs"
path = "src/bin/mixnode.rs"

# [[bench]]
# name = "throughput"
# harness = false